Admin Menu: make CSS selector more specific to fix overlapping UI issue

--- a/projects/plugins/jetpack/modules/masterbar/admin-menu/admin-menu.css
+++ b/projects/plugins/jetpack/modules/masterbar/admin-menu/admin-menu.css
@@ -37,6 +37,7 @@
 }
 
 @media (min-width: 961px) {
+	#jp-search-configure  .interface-interface-skeleton,
 	.auto-fold .interface-interface-skeleton,
 	.auto-fold .edit-post-layout .components-editor-notices__snackbar,
 	.jp-dialogue-modern-full__container {
